--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,17 @@ url: https://mlbookcamp.com
 google_analytics: UA-164644422-1
 name: Machine Learning Bookcamp
 twitter: '@Al_Grigor'
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+  - previews/
+
+collections:
+  course:
+    output: true
+    permalink: /:collection/:title
+  article:
+    output: true
+    permalink: /:collection/:title
